[package]
name = "discret_beacon"
version = "0.6.0"
edition = "2021"

[dependencies]
discret = { version = "0.6.2", features = ["log"] }
toml = "0.8.15"
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
rustls = { version = "0.23.8", default-features = false, features = [
    "ring",
    "std",

] }
tokio = { version = "1.38.0", features = ["full"] }
log = "0.4.22"
log4rs = { version = "1.3.0", features = ["all_components", "gzip"] }
